fix close button position not aligned on smaller devices

--- a/src/style.css
+++ b/src/style.css
@@ -141,7 +141,7 @@ header {
   #closeFormBtn {
     position: relative;
     top: -120px;
-    right: -180px;
+    right: -46%;
     padding: 0;
     text-align: center;
     width: 21px;
